v1.1.2: fix modulepath when jigsaw.module not set