@@ -161,6 +161,11 @@ public class JpmsGradlePlugin implements Plugin<Project> {
 								compilerArgs.add(jigsaw.getTestLibraryModule());
 								compilerArgs.add("--add-reads");
 								compilerArgs.add(String.format("%s=%s", jigsaw.getModule(), jigsaw.getTestLibraryModule()));
+							} else {
+								compilerArgs.add("--add-modules");
+								compilerArgs.add(jigsaw.getTestLibraryModule());
+								compilerArgs.add("--add-reads");
+								compilerArgs.add(String.format("%s=%s", jigsaw.getTestLibraryModule()));
 							}
 							options.setCompilerArgs(compilerArgs);
 						}
